--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "milroyfraser/laravel-obfuscate",
+    "name": "apichef/laravel-obfuscate",
     "type": "library",
     "description": "Laravel package for obfuscating ids in urls.",
     "keywords": [
-        "milroyfraser",
-        "laravel-obfuscate"
+        "laravel",
+        "obfuscation"
     ],
-    "homepage": "https://github.com/milroyfraser/laravel-obfuscate",
+    "homepage": "https://github.com/apichef/laravel-obfuscate",
     "license": "MIT",
     "authors": [
         {
@@ -24,16 +24,17 @@
     },
     "require-dev": {
         "phpunit/phpunit" : ">=8.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.0",
+        "orchestra/testbench": "^4.0"
     },
     "autoload": {
         "psr-4": {
-            "LaravelObfuscate\\": "src"
+            "ApiChef\\Obfuscate\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "LaravelObfuscate\\": "tests"
+            "ApiChef\\Obfuscate\\": "tests"
         }
     },
     "scripts": {
@@ -47,7 +48,7 @@
         },
         "laravel": {
             "providers": [
-                "LaravelObfuscate\\ObfuscateServiceProvider"
+                "ApiChef\\Obfuscate\\ObfuscateServiceProvider"
             ]
         }
     },
