--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     ],
     "require": {
         "php": "~7.2",
-        "illuminate/database": "~5.6.34|~5.7.0|~5.8.0|^6.0",
-        "illuminate/support": "~5.6.34|~5.7.0|~5.8.0|^6.0",
-        "jenssegers/optimus": "^1.0"
+        "illuminate/database": "^5.8|^6.0|^7.0",
+        "illuminate/support": "^5.8|^6.0|^7.0",
+        "jenssegers/optimus": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=8.0",
-        "squizlabs/php_codesniffer": "^3.0",
-        "orchestra/testbench": "^4.0"
+        "phpunit/phpunit" : "^8.0|^9.0",
+        "squizlabs/php_codesniffer": "^3.5",
+        "orchestra/testbench": "^3.8|^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
