--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,16 @@
         }
     ],
     "require": {
-        "php": "~7.2",
-        "illuminate/database": "^5.8|^6.0|^7.0",
-        "illuminate/support": "^5.8|^6.0|^7.0",
+        "php": "^7.3",
+        "illuminate/database": "^5.8|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.8|^6.0|^7.0|^8.0",
         "jenssegers/optimus": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit" : "^8.0|^9.0",
-        "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^3.8|^4.0|^5.0"
+        "laravel/legacy-factories": "^1.0",
+        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
+        "phpunit/phpunit": "^8.0|^9.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
