--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,44 @@
 name: CI
 
-on:
-    push:
-        branches: [ master ]
-    pull_request:
-        branches: [ master ]
+on: [push, pull_request]
 
 jobs:
-    laravel-tests:
+    test:
 
         runs-on: ubuntu-latest
+        strategy:
+            fail-fast: false
+            matrix:
+                php: [8.1, 8.0, 7.4, 7.3]
+                laravel: [9.*, 8.*]
+                dependency-version: [prefer-lowest, prefer-stable]
+                include:
+                    - laravel: 9.*
+                      testbench: 7.*
+                    - laravel: 8.*
+                      testbench: 6.23
+                exclude:
+                    - laravel: 9.*
+                      php: 7.4
+                    - laravel: 9.*
+                      php: 7.3
+
+        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
         steps:
-            - uses: shivammathur/setup-php@b7d1d9c9a92d8d8463ce36d7f60da34d461724f8
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
               with:
-                  php-version: '8.0'
-            - uses: actions/checkout@v2
+                  php-version: ${{ matrix.php }}
+                  extensions: curl, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, iconv
+                  coverage: none
 
-            - name: Install Dependencies
-              run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
-            - name: Execute tests via PHPUnit
+            - name: Install dependencies
+              run: |
+                  composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "symfony/console:>=4.3.4" "mockery/mockery:^1.3.2" --no-interaction --no-update
+                  composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+            - name: Execute tests
               run: vendor/bin/phpunit
