--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,19 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "illuminate/database": "^5.8|^6.0|^7.0|^8.0",
-        "illuminate/support": "^5.8|^6.0|^7.0|^8.0",
+        "php": "^7.3|^8.0|^8.1",
+        "illuminate/database": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0",
         "jenssegers/optimus": "^1.1"
     },
     "require-dev": {
-        "laravel/legacy-factories": "^1.0",
-        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
-        "phpunit/phpunit": "^8.0|^9.0",
+        "orchestra/testbench": "^6.0|^7.0",
+        "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
+            "Database\\Factories\\": "tests/database/factories/",
             "ApiChef\\Obfuscate\\": "src"
         }
     },
