--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,23 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.1, 8.0, 7.4, 7.3]
-                laravel: [9.*, 8.*]
+                php: [8.2,8.1, 8.0, 7.4, 7.3]
+                laravel: [11.0*,10.*,9.*, 8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
+                    - laravel: 11.*
+                     testbench: 9.0
+                    - laravel: 10.*
+                     testbench: 8.22
                     - laravel: 9.*
                       testbench: 7.*
                     - laravel: 8.*
                       testbench: 6.23
                 exclude:
+                    - laravel: 11.*
+                      php: 8.2
+                    - laravel: 9.*
+                      php: 8.1
                     - laravel: 9.*
                       php: 7.4
                     - laravel: 9.*
