--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0|^8.1",
-        "illuminate/database": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0",
+        "php": "^7.3|^8.0|^8.1|^8.2",
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "jenssegers/optimus": "^1.1"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": "^9.0.0||^8.0.0|^6.0|^7.0",
         "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.5"
     },
