--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.2,8.1, 8.0, 7.4, 7.3]
-                laravel: [11.0*,10.*,9.*, 8.*]
+                php: [8.2, 8.1, 8.0, 7.4, 7.3]
+                laravel: [11.0*, 10.*, 9.*, 8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
                     - laravel: 11.*
